--- a/apps/bjeco/components/Main/Main.module.scss
+++ b/apps/bjeco/components/Main/Main.module.scss
@@ -1,3 +1,8 @@
-.Main {
+._ {
   height: 100%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  font-size: calc(10px + 2vmin);
+  justify-content: center;
 }
