Try moving fonts to root of public

--- a/apps/bjeco/pages/app.scss
+++ b/apps/bjeco/pages/app.scss
@@ -64,8 +64,8 @@ body,
 @font-face {
   font-family: 'bje';
   font-weight: 400;
-  src: url('/fonts/FranzSans-Medium.woff') format('woff'),
-    url('/fonts/FranzSans-Medium.woff2') format('woff2');
+  src: url('/FranzSans-Medium.woff') format('woff'),
+    url('/FranzSans-Medium.woff2') format('woff2');
 }
 
 /* @font-face {
@@ -85,8 +85,8 @@ body,
 @font-face {
   font-family: 'bje';
   font-weight: 800;
-  src: url('/fonts/FranzSans-ExtraBold.woff') format('woff'),
-    url('/fonts/FranzSans-ExtraBold.woff2') format('woff2');
+  src: url('/FranzSans-ExtraBold.woff') format('woff'),
+    url('/FranzSans-ExtraBold.woff2') format('woff2');
 }
 
 /*
