--- a/apps/bjeco/pages/app.scss
+++ b/apps/bjeco/pages/app.scss
@@ -100,8 +100,7 @@ body,
 // REMOVE THE ITEMS BELOW SOON
 
 .form {
-  width: 280px;
-  min-height: 320px;
+  max-width: 400px;
   display: flex;
   flex-direction: column;
   gap: 1rem;
