Try fonts again

--- a/apps/bjeco/pages/app.scss
+++ b/apps/bjeco/pages/app.scss
@@ -63,9 +63,10 @@ body,
 
 @font-face {
   font-family: 'bje';
+  font-style: normal;
   font-weight: 400;
-  src: url('/FranzSans-Medium.woff') format('woff'),
-    url('/FranzSans-Medium.woff2') format('woff2');
+  font-display: optional;
+  src: url('../public/fonts/FranzSans-Medium.woff2') format('woff2');
 }
 
 /* @font-face {
@@ -84,9 +85,10 @@ body,
 
 @font-face {
   font-family: 'bje';
+  font-style: normal;
   font-weight: 800;
-  src: url('/FranzSans-ExtraBold.woff') format('woff'),
-    url('/FranzSans-ExtraBold.woff2') format('woff2');
+  font-display: optional;
+  src: url('../public/fonts/FranzSans-ExtraBold.woff2') format('woff2');
 }
 
 /*
