--- a/apps/bjeco/pages/app.scss
+++ b/apps/bjeco/pages/app.scss
@@ -66,7 +66,7 @@ body,
   font-style: normal;
   font-weight: 400;
   font-display: optional;
-  src: url('../public/fonts/FranzSans-Medium.woff2') format('woff2');
+  src: url('/fonts/FranzSans-Medium.woff2') format('woff2');
 }
 
 /* @font-face {
@@ -88,7 +88,7 @@ body,
   font-style: normal;
   font-weight: 800;
   font-display: optional;
-  src: url('../public/fonts/FranzSans-ExtraBold.woff2') format('woff2');
+  src: url('/fonts/FranzSans-ExtraBold.woff2') format('woff2');
 }
 
 /*
